--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "dependencies": {
     "axios": "^0.18.0",
     "bootstrap": "^4.3.1",
+    "c3": "^0.7.15",
+    "c3-react": "^0.1.13",
     "react": "^16.13.1",
     "react-datepicker": "^2.5.0",
     "react-dom": "^16.8.6",
@@ -12,6 +14,7 @@
     "react-rt-chart": "^2.0.0",
     "react-scripts": "3.0.1",
     "react-split-pane": "^0.1.89",
+    "recharts": "^1.8.5",
     "socket.io": "^2.3.0",
     "websocket": "^1.0.31"
   },
